--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -11,11 +11,18 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background: #1a1a1a;
             color: #ffffff;
+            overflow: hidden; /* Prevent scrolling */
+            height: 100vh;
+            box-sizing: border-box;
         }
 
         #game-container {
             max-width: 800px;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            height: calc(100vh - 40px); /* Account for padding */
+            overflow: hidden;
         }
 
         #stats {
@@ -34,6 +41,8 @@
             padding: 10px;
             border-radius: 8px;
             margin-bottom: 20px;
+            overflow: hidden;
+            flex: 1;
         }
 
         .cell {
@@ -83,7 +92,19 @@
             text-align: center;
             display: none;
         }
+        #retryButton {
+            background: #4a4a4a;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-left: 16px;
+        }
 
+        #retryButton:hover {
+            background: #5a5a5a;
+        }
         .success {
             background: #006400;
         }
@@ -98,6 +119,7 @@
         <div id="stats">
             <div>Player: <span id="username">Waiting...</span></div>
             <div>Karma: <span id="karma">Waiting...</span></div>
+            <button id="retryButton" style="display: none;">Retry</button>
             <div id="debug"></div>
         </div>
         <div id="maze-grid"></div>
