--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -42,7 +42,7 @@
             border-radius: 8px;
             margin-bottom: 20px;
             overflow: hidden;
-            flex: 1;
+            /* flex: 1; */
             margin: 0 auto;
         }
 
@@ -87,11 +87,35 @@
         }
 
         #message {
-            padding: 10px;
-            margin-top: 10px;
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
             border-radius: 8px;
             text-align: center;
             display: none;
+            z-index: 1000;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            animation: fadeIn 0.3s ease;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translate(-50%, -60%);
+            }
+            to {
+                opacity: 1;
+                transform: translate(-50%, -50%);
+            }
+        }
+
+        .success {
+            background: rgba(0, 100, 0, 0.9);
+            color: white;
+            padding: 20px 40px;
+            font-size: 1.2em;
+            font-weight: bold;
         }
         #retryButton {
             background: #4a4a4a;
@@ -141,7 +165,7 @@
         <div id="stats">
             <div>Player: <span id="username">Waiting...</span></div>
             <div>Karma: <span id="karma">Waiting...</span></div>
-            <button id="retryButton" style="display: none;">Retry</button>
+            <button id="retryButton">Retry</button>
             <div id="debug"></div>
         </div>
         <div id="maze-grid"></div>
