--- a/webroot/maze.html
+++ b/webroot/maze.html
@@ -164,7 +164,7 @@
     <div id="game-container">
         <div id="stats">
             <div>Player: <span id="username">Waiting...</span></div>
-            <div>Karma: <span id="karma">Waiting...</span></div>
+            <div>Keys: <span id="keys">Waiting...</span></div>
             <button id="retryButton">Retry</button>
             <div id="debug"></div>
         </div>
